Config: localhost install

--- a/install.html
+++ b/install.html
@@ -3,7 +3,7 @@
     <p>Packaged app installation page</p>
     <script>
       // This URL must be a full url.
-      var manifestUrl = 'http://www7e80.noip.me/othello/manifest.webapp';
+      var manifestUrl = 'http://localhost/othello/manifest.webapp';
       var req = navigator.mozApps.install(manifestUrl);
       req.onsuccess = function() {
         alert(this.result.origin);
