Evol: CSS design

--- a/othello.html
+++ b/othello.html
@@ -1,4 +1,10 @@
-<html><head><title>othello</title></head>
+<!DOCTYPE html>
+<html><head><title>reversi</title>
+<!-- meta name="viewport" content="user-scalable = yes"-->
+<!--<meta name="viewport" content="width=480, initial-scale=0.7"> -->
+<!--<meta name="viewport" content="width=800">--> 
+<!-- <meta name="viewport" content="initial-scale=0.5"> -->
+</head>
 <!--
 chgt CSS
 change function gamevoer
@@ -7,6 +13,10 @@ bug si mvt player1 impossible
 update: largeur pour FF: 480 (x800)
 -->
 <style>
+html, body {
+ width: 100%;
+ height: 100%;
+}
 table{
  border-width:1px; 
  border-style:solid; 
