--- a/index.html
+++ b/index.html
@@ -1,496 +1,11 @@
 <!DOCTYPE html>
-<html><head><title>reversi</title>
-<!-- TODO bug noscore when computer finishes 
- store score 
- click on options and css rule-->
-<!-- meta name="viewport" content="user-scalable = yes"-->
-<!--<meta name="viewport" content="width=480, initial-scale=0.7"> -->
-<!--<meta name="viewport" content="width=800">--> 
-<!-- <meta name="viewport" content="initial-scale=0.5"> -->
-</head>
-<!--
-chgt CSS
-change function gamevoer
-bug si mvt player1 impossible
+<html lang="en"><head><title>reversi</title>
+<meta charset="utf-8"/>
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
+<link rel="stylesheet" href="app.css"/>
+</head><body>
+<script src="app.js"></script>
 
-update: largeur pour FF: 480 (x800)
-
-passage en jsCss
--->
-<script>
-var app={
-	params:{
-		player1:localStorage.player1|| 'Human', 
-		player2:localStorage.player2|| 'Computer'
-	},
-	game:{
-		started:false,
-		over: false
-	}
-};
-
-
-//action of debug: more logs, change formatting
-// values 0: normal, 1 debug, 2 trace
-var debug=0;
-var baseSize=25;
-var lgreen=0x5F5;
-var style1={
-	"html, body": {
-	 width: "100%",
-	 height: "100%",
-	 margin: 0,
-	 font: "bold 20px arial"
-	},
-	h1:{
-	 background: "black",
-	 color: 0xFFFFFF,
-	 text_align: "center",
-	 margin: 0
-	},
-	table: {
-	 margin: 5,
-	 border_width:1,
-	 border_style:"solid",
-	 border_color:"black",
-	 border_collapse:"collapse",
-	 margin_left:"auto", 
-     margin_right:"auto"
-	},
-
-	td: { 
-	 border_width:1,
-	 border_style:"solid",
-	 border_color:"black",
-	 width: baseSize+4,
-	 height: baseSize+4,
-	 background_color: 0x22DD22
-	},
-	img: {
-	 width: baseSize+"px",
-	 height: baseSize+"px"
-	},
-	".player1": {
-		width: baseSize+"px",
-		height: baseSize+"px",
-		border: "2px solid black",
-		border_radius: "22px",
-		background_color: "black"
-	},
-	".player2": {
-		width: baseSize+"px",
-		height: baseSize+"px",
-		border: "2px solid black",
-		"border-radius": "22px",
-		"background-color": "white"
-	},
-	"#message": {
-	 border:"1px solid black",
-	 text_align:"center",
-	 width: 8*(baseSize+7),
-	 height: 75,
-	 color: 0x5F9EA0,
-	 font: debug?"200 10px monospace":"bold 20px arial",
-	 overflow:"auto",
-	 margin_top: 5,
-	 margin_left: "auto",
-     margin_right: "auto"
-	},
-	"#gameover": {
-	 //border:"1px solid black",
-	 position: "absolute",
-	 top: 125,
-	 left: 0,
-	 right: 0,
-	 margin: "0 auto",
-     padding: 10,
-	 max_width: 130,
-	 background_color: "rgba(127,255,127,0.75)",
-	 //box_shadow: "0px 0px 25px #5F5",
-	 color: 0,
-	 text_align: "center",
-	 font: "900 30px arial,sans-serif",
-	 display: "none",
-	},
-	".btnbar": {
-		text_align:"center",
-		background_color: "black",
-		position: "fixed",
-		left: 0,
-		right: 0,
-		bottom: 0
-	},
-	".btn": {
-		text_align:"center",
-		background_color: lgreen,
-		border: "2px solid #050",
-		border_radius:7,
-		margin: 5,
-		font: "bold 25px arial",
-		text_transform: "uppercase"
-	},
-	".window": {
-		position: "fixed",
-		top:0,
-		bottom:0,
-		left:0,
-		right:0,
-		background_color:0xFFFFFF
-	},
-	".centered": {
-		margin_left: "auto",
-		margin_right: "auto",
-		width: 300
-	},
-	label: {
-		width: 170,
-		display: "inline-block"
-	},
-	select: {
-		font: "bold 20px arial",
-		width: 120
-	}
-} 
-/**
- * Map<Map<<String>> elem: map of map of CSS strings
- * syntax simplification: _ replaced by -
- * number replaced by numberpx or #number
- */
-function js2css(js){
-	monstyle=document.createElement('style');
-	document.head.appendChild(monstyle);
-	for (var k in js){
-	    css = k + '{'; 
-		for (var l in js[k]){
-			var prop=l.replace('_','-'); 
-			var value=js[k][l];
-			if (typeof value === 'number' ){
-				if(l.indexOf('color')>=0){
-					value ="#"+value.toString(16);
-				}else{
-					value +="px";
-				}
-			}
-			css += prop + ': ' + value +';';
-		}
-		css += '}';
-		monstyle.sheet.insertRule(css,0);
-		//console.log(css);
-	}
-}
-js2css(style1);
-
-var gplayer=1;
-var oth;
-var gameover=false;
-var score=new Array(3);
-//deprecated var computer=true;
-var round=0;
-var lang= "en";
-var i18n={
-	en:{
-		playerNames:['','Black','White']
-	}
-}
-
-
-//==technical
-//generation html
-function doTable(){
-var i,j;
-for(i=0;i<8;i++){
-document.write('<tr>');
-	for(j=0;j<8;j++){
-	//document.write('<td><img src="othello/empty.png" onclick="doCell(this,'+i+','+j+')"/></td>');
-	document.write('<td onclick="doCell(this,'+i+','+j+')"><div id="cell'+i+'_'+j+'" ></div> </td>');
-	}
-document.write('</tr>');
-}
-initGame();
-}
-
-function doCell(cell,i,j){
-	doTestAndPlay(gplayer,i,j);
-}
-
-function doTestAndPlay(player,i,j){
-	app.game.started=true;
-	if(gameover) return;
-	//outprintappend("click"+i+j+player+gplayer);
-	var nb = doPlay(player,i,j,false);
-	if(nb>0){
-		setOpponentPlayer();
-		outprintappend("Round "+(round++) +". Got "+nb+" changes ", 2);	
-		doNextPlayer();
-	}
-}
-
-function setOpponentPlayer(){
-	var opponent = 3-gplayer;
-	if( isPlayable(opponent)){
-		gplayer=opponent;
-	} else {
-		if(! isPlayable(gplayer)){
-			stopGames();
-			return 1;
-		}
-	}
-	
-}
-
-function doNextPlayer(){
- 	if(gameover) return;
-	outprintappend(i18n[lang].playerNames[gplayer]+ " please");
-	if(app.params['player'+gplayer]=='Computer'){
-		playComputer(gplayer);
-	}
-}
-
-
-var delay=0;
-function doPlaySwitchUI(player,i,j,time){
-	//outprint("play"+player+i+j);
-	//delay= delay?delay+speedDelay:(speedDelay);
-	delay= delay?delay+speedDelay:(speedDelay);
-	setTimeout(function(){
-		document.getElementById("cell"+i+"_"+j).className="player"+player;
-		delay=0;
-		lastPlayDelay=1;
-	},time||delay);
-}
-
-function outprint(msg){
-	outprintappend(msg,0);
-}
-function outprintappend(msg,level){
-	if(level && level>debug) return;
-	console.log(msg);
-    if(debug) msg += '<br/>' + document.getElementById('message').innerHTML;
-	setTimeout(function(){
-		document.getElementById('message').innerHTML =msg;
-	},delay);
-}
-//==game API
-
-function initGame(){
-oth = new Array(8);
-var i,j;
-for(i=0;i<8;i++){
-	oth[i]=new Array(8);
-	for(j=0;j<8;j++){
-	oth[i][j]=0;
-	}
-}
-doPlayAdd(1,3,3);
-doPlayAdd(1,4,4);
-doPlayAdd(2,3,4);
-doPlayAdd(2,4,3);
-}
-
-function doPlaySwitch(player,i,j,i0,j0,nb){
-var k;
-for(k=0;k<nb;k++){
-	i+=i0;j+=j0;
-	doPlayAdd(player,i,j);
-}
-}
-function doPlayAdd(player,i,j,time){
-oth[i][j]=player;
-doPlaySwitchUI(player,i,j,time);
-}
-
-var lastPlayDelay=1;
-var speedDelay=100;
-var computerDelay=500;
-/*
-algorithm 
-loop in 8 direction till border, find other color, till ours, if none, return unplayable code ie 0.
-*/
-function doPlay(player,i,j,simu){
-if(oth[i][j]!=0) return 0;
-var i0,j0, rslt=0;
-for(i0=-1;i0<=1;i0++)
-for(j0=-1;j0<=1;j0++)
-	rslt+=doPlayDir(player,i,j,i0,j0,simu);
-if(simu) return rslt;
-if(rslt>0){
- doPlayAdd(player,i,j,lastPlayDelay);
-// lastPlayDelay=delay;
-}
-return rslt;
-}
-
-
-function doPlayDir(player,i1,j1,i0,j0, simu){
-var i=i1,j=j1;
-if((i0==0)&&(j0==0)) return 0;
-var rslt=0;
-var opp=3-player;
-i+=i0;j+=j0;
-while(inLimit(i) && inLimit(j) && (oth[i][j]==opp)){
-	i+=i0;j+=j0;rslt++;
-}
-if(inLimit(i) && inLimit(j)&& oth[i][j]==player){
-	if(simu) return rslt;
-	doPlaySwitch(player,i1,j1,i0,j0,rslt);
-	return rslt;
-}
-return 0;
-}
-
-function isPlayable(player){
-	for(i=0;i<8;i++)
-	for(j=0;j<8;j++){
-		if(doPlay(player,i,j,true)>0) return true;
-	}
-	return false;
-}
-
-function stopGames(){
-	score[1]=0;
-	score[2]=0;
-	for(i=0;i<8;i++)
-	for(j=0;j<8;j++){
-		score[oth[i][j]]++;
-	}
-	gameover=true;
-	outprint("The game is over. <br/> <b>Black:</b> "+score[1]+"<br/><b>White:</b> "+score[2]);
-	var bigmsg='';
-	var human=0;
-	if( score[1]==score[2]){
-		bigmsg="TIE";
-	}
-	else if (app.params.player1 == 'Human' && app.params.player2 != 'Human'){
-		if( score[1]>score[2]) bigmsg="You WIN";
-		else bigmsg="You LOSE";
-	}
-	else if (app.params.player2 == 'Human' && app.params.player1 != 'Human'){
-		if( score[2]>score[1]) bigmsg="You WIN";
-		else bigmsg="You LOSE";
-	} else if( score[1]>score[2]) bigmsg="Black WIN";
-	else bigmsg="White WIN"
-	
-	document.getElementById('gameover').innerHTML=bigmsg;
-	setTimeout(function(){
-		document.getElementById('gameover').style.display="table-cell";
-	},delay);
-	
-}
-
-function inLimit(i){return((0<=i) &&(i<8));}
-//==extension
-var myarray=[
-[8,0,6,4,4,6,0,8], 
-[0,0,4,4,4,4,0,0], 
-[6,4,4,4,4,4,4,6], 
-[4,4,4,4,4,4,4,4], 
-[4,4,4,4,4,4,4,4], 
-[6,4,6,4,4,6,4,6], 
-[0,0,4,4,4,4,0,0], 
-[8,0,6,4,4,6,0,8]
-]
-function playComputer(gplayer){
-	delay=delay+computerDelay;
-	lastPlayDelay=delay;
-	outprintappend("play computer "+gplayer,2);
-	//just play in priority the best notated cells.
-	for(k=8;k>=-1;k--)
-	for(i=0;i<8;i++)
-	for(j=0;j<8;j++){
-		if(myarray[i][j]>=k){
-			nb = doPlay(gplayer,i,j,true);//simu
-			if(nb>0){
-				nb = doTestAndPlay(gplayer,i,j,true);
-				if(nb>0){
-				//bug see why it happens alert('KO');
-				}
-				return;
-			}
-		}
-	}
-	
-	setOpponentPlayer();
-	doNextPlayer();
-}
-
-function restart(){
-	if(!app.game.started){
-		doNextPlayer();
-		return;
-	}
-
-	if(gameover || confirm("Current game wil be lost, are you sure?") ){
-		window.location.reload();	
-	}
-}
-
-var window0;
-
-function sfield(field, input){
-return '<div class="centered"><label>'+field+': </label>'+
-		'<select name="'+input+'"> <option>Human</option><option>Computer</option></select></div>';
-}
-function pushForm(o){
-	for(var key in o){
-		var elts = document.getElementsByName(key);
-		for(var i=0;i<elts.length;i++){
-			elts[i].value=o[key];
-		}
-	}
-}
-function pullForm(o){
-	for(var key in o){
-		var elts = document.getElementsByName(key);
-		for(var i=0;i<elts.length;i++){
-			o[key]=elts[i].value;
-		}
-	}
-}
-var params={player1:'', player2:''};
-function param(){
-	div=document.createElement('div');
-	div.setAttribute("class","window");
-	window0=document.body.appendChild(div);
-	//window0.innerHTML='<div style="position:absolute;top:0;bottom:0;left:0;right:0;" ><h1>test</h1></div>';
-	window0.innerHTML='<h1>Options</h1><br>'+sfield('Player 1 (Black)','player1')+'<br>'+
-		sfield('Player2 (White)','player2')+
-		'<div class="btnbar">'+
-		'	<input type="button" class="btn" onclick="cloze()" value="Cancel"/>'+
-		'	<input type="button" class="btn" onclick="cloze(true)" value="ok"/>'+
-		'</div>';
-	pushForm(app.params);
-}
-
-function cloze(save){
-	if(save){
-		pullForm(app.params);
-		localStorage.player1=app.params.player1;
-		localStorage.player2=app.params.player2;
-	}
-	window0.remove();
-}
-
-function pageLoaded(){
-	doHash();
-	app.addLink();
-	outprintappend("press Start");
-}
-
-function doHash(){
-	if (window.location.hash=="#options"){
-		if( ! window0) param();
-	}
-}
-app.addLink= function(){
-	document.getElementsByName("restart")[0].addEventListener("click", restart);
-	document.getElementsByName("options")[0].addEventListener("click", param);
-}
-
-
-window.onhashchange=doHash;
-
-</script>
-<body>
 <h1>Reversi</h1>
 <table>
 <script>
