Refactor: move all code in different objects and files
 - create new files
 - wrap code into Javascript constructors

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en"><head><title>reversi</title>
 <meta charset="utf-8"/>
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="stylesheet" href="app.css"/>
 </head><body>
+<script src="d.js"></script>
+<script src="board.js"></script>
+<script src="computer.js"></script>
+<script src="option.js"></script>
 <script src="app.js"></script>
 
 <h1>Reversi</h1>
 <table>
 <script>
-doTable();</script>
+board.doTable();</script>
 </table>
 <div id="message"></div>
 <div class="btnbar">
