--- a/index.html
+++ b/index.html
@@ -11,18 +11,26 @@
 <script src="computer.js"></script>
 <script src="option.js"></script>
 <script src="app.js"></script>
-
-<h1>Reversi</h1>
-<table>
-<script>
-board.doTable();</script>
-</table>
-<div id="message"></div>
-<div class="btnbar">
-	<input type="button" class="btn" name="restart" value="Start"/>
-	<input type="button" class="btn" name="options" value="Options"/>
+<!--
+<div style="position:absolute">
+	<div class="test10">size 10</div>
+	<div class="test25">size 25</div>
+	<div class="test50">size 50</div>
+	<div class="test100">size 100</div>
 </div>
-<div id="gameover"></div>
+-->
+<h1>Reversi</h1>
+
+	<table class="centerGame">
+	<script>
+	board.doTable();</script>
+	</table>
+	<div id="message" class="centerGame"></div>
+	<div class="btnbar">
+		<input type="button" class="btn" name="restart" value="Start"/>
+		<input type="button" class="btn" name="options" value="Options"/>
+	</div>
+	<div id="gameover"></div>
 <script>
 pageLoaded();</script>
 </body></html>
